; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_is_key_char.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_is_key_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8)* @is_key_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_key_char(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8, i8* %2, align 1
  %4 = sext i8 %3 to i32
  %5 = or i32 %4, 32
  %6 = sub nsw i32 %5, 97
  %7 = icmp ult i32 %6, 26
  br i1 %7, label %29, label %8

8:                                                ; preds = %1
  %9 = load i8, i8* %2, align 1
  %10 = sext i8 %9 to i32
  %11 = sub nsw i32 %10, 48
  %12 = icmp ult i32 %11, 10
  br i1 %12, label %29, label %13

13:                                               ; preds = %8
  %14 = load i8, i8* %2, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 45
  br i1 %16, label %29, label %17

17:                                               ; preds = %13
  %18 = load i8, i8* %2, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 95
  br i1 %20, label %29, label %21

21:                                               ; preds = %17
  %22 = load i8, i8* %2, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 47
  br i1 %24, label %29, label %25

25:                                               ; preds = %21
  %26 = load i8, i8* %2, align 1
  %27 = sext i8 %26 to i32
  %28 = icmp eq i32 %27, 46
  br label %29

29:                                               ; preds = %25, %21, %17, %13, %8, %1
  %30 = phi i1 [ true, %21 ], [ true, %17 ], [ true, %13 ], [ true, %8 ], [ true, %1 ], [ %28, %25 ]
  %31 = zext i1 %30 to i32
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
